--- a/index.html
+++ b/index.html
@@ -43,6 +43,6 @@
     </div>
 
 
-    <script src="assets/js/index.js"></script>
+    <script src="assets/javascript/index.js"></script>
 </body>
 </html>
