Link to tutors solution

--- a/index.html
+++ b/index.html
@@ -46,5 +46,10 @@
 
 
     <script src="assets/javascript/index.js"></script>
+
+    <div class="footer">
+        <p>&copy; 2025 Natalie Gökkaya using Ai to build the javascript elements</p>
+    <p><a href="../tutorSolution/html.html" target="_blank">Tutor's Solution</a></p>
+    </div>
 </body>
 </html>
