--- a/assets/tutorSolution/html.html
+++ b/assets/tutorSolution/html.html
@@ -52,5 +52,7 @@
 
     <script src="javascript.js"></script>
 </body>
-
+<footer>
+    <p> <a href="https://github.com/NatGok/Simple-Maths">GitHub Repository</a></p>
+</footer>
 </html>
