--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="footer">
         <p>&copy; 2025 Natalie Gökkaya using Ai to build the javascript elements</p>
-    <p><a href="../tutorSolution/html.html" target="_blank">Tutor's Solution</a></p>
+    <p><a href="../assets/tutorSolution/html.html">Tutor Solution</a></p>
     </div>
 </body>
 </html>
