Division calculation inserted

--- a/assets/tutorSolution/html.html
+++ b/assets/tutorSolution/html.html
@@ -53,6 +53,7 @@
     <script src="javascript.js"></script>
 </body>
 <footer>
-    <p> <a href="https://github.com/NatGok/Simple-Maths">GitHub Repository</a></p>
+    <p> <a href="https://github.com/NatGok/Simple-Maths">Natalie's GitHub Repository</a></p>
+    <p> <a href="/index.html">Back to my solution</a></p>
 </footer>
 </html>
