Change location and size of output message

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <p class="right">Correct Answers</p>
             <p class="wrong">Incorrect Answers</p>
         </div>
+    <div id="answer-message" style="text-align:center; font-size:1.5em; min-height:2.5em; margin-top: 1.5em; letter-spacing: 0.05em;"></div>
     </div>
 
 
