--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div class="footer">
         <p>&copy; 2025 Natalie Gökkaya using Ai to build the javascript elements</p>
-    <p><a href="../assets/tutorSolution/html.html">Tutor' Solution</a></p>
+    <p><a href="/assets/tutorSolution/html.html">Tutor' Solution</a></p>
     </div>
 </body>
 </html>
