Change file location

--- a/assets/tutorSolution/html.html
+++ b/assets/tutorSolution/html.html
@@ -10,7 +10,7 @@
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway%7CRighteous" rel="stylesheet">
 
-    <link rel="stylesheet" href="assets/tutorSolution/cssstyle.css">
+    <link rel="stylesheet" href="cssstyle.css">
     <title>Document</title>
 </head>
 
@@ -50,7 +50,7 @@
         <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
     </div>
 
-    <script src="assets/tutorSolution/javascript.js"></script>
+    <script src="javascript.js"></script>
 </body>
 <footer>
     
