--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test your Memory of Maths </title>
-    <link rel="stylesheet" href="assets/css/index.css">
+    <link rel="stylesheet" href="../assets/tutorSolution/cssstyle.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap" rel="stylesheet">
@@ -46,7 +46,7 @@
     </div>
 
 
-    <script src="assets/javascript/index.js"></script>
+    <script src="assets/tutorSolution/javascript.js"></script>
 
     <div class="footer">
         <p>&copy; 2025 Natalie Gökkaya using Ai to build the javascript elements</p>
